--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.sql.init.mode=always
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/share-it
-spring.datasource.username=vlad
-spring.datasource.password=91735vladB!
+spring.datasource.username=postgres
+spring.datasource.password=iamroot
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
